--- a/frontend/templates/pages/login.html
+++ b/frontend/templates/pages/login.html
@@ -295,6 +295,9 @@ function redirectByRole(role) {
         case 'Admin':
             window.location.href = '/admin';
             break;
+        case 'Cashier':
+            window.location.href = '/cashier';
+            break;
         default:
             window.location.href = '/';
     }
